<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/container"
    android:textColor="@color/black"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="?attr/actionBarSize">



    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity"
        android:layout_margin="10dp"
        android:background="@drawable/bg"    >



        <ImageButton
            android:id="@+id/btn_settings"
            android:layout_width="50sp"
            android:layout_height="50sp"
            android:src="@drawable/settings"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="5dp"
            android:background="?android:attr/selectableItemBackground"
            android:contentDescription="@string/todo" />

        <TextView

            android:id="@+id/texttitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tic_tac_toe"
            android:layout_centerHorizontal="true"
            android:textSize="36sp"
            android:textStyle="bold"
            android:textColor="#FFFFFF"
            android:fontFamily="cursive"

            />

        <RelativeLayout
            android:id="@+id/relative_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/texttitle"
            android:layout_marginBottom="20dp">

            <TextView
                android:id="@+id/text_player1"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/akaya_telivigala"
                android:text="@string/player_1_score"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="26sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/text_player2"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="@string/player_2_score"
                android:textSize="26sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textAlignment="center"
                android:fontFamily="@font/akaya_telivigala"
                android:layout_toEndOf="@id/text_player1"
                />

            <TextView
                android:id="@+id/score_Player1"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/akaya_telivigala"
                android:text="@string/player1"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="26sp"
                android:textStyle="bold"
                android:layout_below="@id/text_player1"/>

            <TextView
                android:id="@+id/score_Player2"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/akaya_telivigala"
                android:text="@string/_0"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="26sp"
                android:textStyle="bold"
                android:layout_below="@id/text_player2"
                android:layout_toEndOf="@id/score_Player1"/>

        </RelativeLayout>



        <LinearLayout
            android:id="@+id/layout_linear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/relative_layout"
            >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn0"
                    android:layout_width="75dp"
                    android:layout_height="75dp"
                    android:textSize="26sp"
                    app:backgroundTint="#FBFBF9"
                    android:layout_marginHorizontal="5dp"
                    android:layout_marginBottom="1.25dp"/>

                <Button

                    android:id="@+id/btn1"
                    android:layout_width="75dp"
                    android:layout_height="75dp"
                    android:textSize="26sp"
                    app:backgroundTint="#FBFBF9"
                    android:layout_marginHorizontal="5dp"
                    android:layout_marginBottom="1.25dp"/>

                <Button

                    android:id="@+id/btn2"
                    android:layout_width="75dp"
                    android:layout_height="75dp"
                    android:textSize="26sp"
                    app:backgroundTint="#FBFBF9"
                    android:layout_marginHorizontal="5dp"
                    android:layout_marginBottom="1.25dp"/>



            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn3"
                    android:layout_width="75dp"
                    android:layout_height="75dp"
                    android:textSize="26sp"
                    app:backgroundTint="#FBFBF9"
                    android:layout_marginHorizontal="5dp"
                    android:layout_marginBottom="1.25dp"/>

                <Button
                    android:id="@+id/btn4"
                    android:layout_width="75dp"
                    android:layout_height="75dp"
                    android:textSize="26sp"
                    app:backgroundTint="#FBFBF9"
                    android:layout_marginHorizontal="5dp"
                    android:layout_marginBottom="1.25dp" />

                <Button
                    android:id="@+id/btn5"
                    android:layout_width="75dp"
                    android:layout_height="75dp"
                    android:textSize="26sp"
                    app:backgroundTint="#FBFBF9"
                    android:layout_marginHorizontal="5dp"
                    android:layout_marginBottom="1.25dp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn6"
                    android:layout_width="75dp"
                    android:layout_height="75dp"
                    android:textSize="26sp"
                    app:backgroundTint="#FBFBF9"
                    android:layout_marginHorizontal="5dp"
                    android:layout_marginBottom="1.25dp"/>

                <Button
                    android:id="@+id/btn7"
                    android:layout_width="75dp"
                    android:layout_height="75dp"
                    android:textSize="26sp"
                    app:backgroundTint="#FBFBF9"
                    android:layout_marginHorizontal="5dp"
                    android:layout_marginBottom="1.25dp"/>

                <Button
                    android:id="@+id/btn8"
                    android:layout_width="75dp"
                    android:layout_height="75dp"
                    android:textSize="26sp"
                    app:backgroundTint="#FBFBF9"
                    android:layout_marginHorizontal="5dp"
                    android:layout_marginBottom="1.25dp"/>

            </LinearLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/textStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/layout_linear"
            android:layout_marginTop="20dp"
            android:layout_centerHorizontal="true"
            android:textSize="26sp"
            android:fontFamily="@font/akaya_telivigala"
            android:text="@string/status"
            android:textStyle="bold"
            android:textColor="@color/black"/>

        <Button
            android:id="@+id/btn_play_again"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/textStatus"
            android:layout_centerHorizontal="true"
            android:text="@string/play_again"
            android:textSize="26sp"
            android:fontFamily="@font/akaya_telivigala"
            android:textStyle="bold"
            android:backgroundTint="#ff7994"/>

        <Button
            android:id="@+id/btn_reset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/btn_play_again"
            android:layout_centerHorizontal="true"
            android:text="@string/reset_game"
            android:textSize="26sp"
            android:fontFamily="@font/akaya_telivigala"
            android:textStyle="bold"
            android:backgroundTint="#6a951f"/>

    </RelativeLayout>
    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/nav_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="0dp"
        android:background="?android:attr/windowBackground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:menu="@menu/bottom_nav_menu" />

    <fragment
        android:id="@+id/nav_host_fragment_activity_main"
        android:name="androidx.navigation.fragment.NavHostFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:defaultNavHost="true"
        app:layout_constraintBottom_toTopOf="@id/nav_view"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navGraph="@navigation/mobile_navigation" />

</androidx.constraintlayout.widget.ConstraintLayout>